  objects.

- Add the ``get_widget_resources`` method to ``deform.Field``
  objects.

- Allow ``deform.Field`` (and ``deform.Form``) objects to accept a
  "resource registry" as a constructor argument.

- Add the ``deform.Field.set_widgets`` method, which allows a
  (potentially nested) set of widgets to be applied to children fields
  of the field upon which it is called.

0.4 (2010-08-22)
----------------

Bug Fixes
~~~~~~~~~

- When the hidden widget is used to deserialize a field, return
  ``colander.null`` rather than the empty string so that it may be
  used to represent non-text fields such as ``colander.Integer``.
  This is isomorphic to the change done previously to
  ``deform.TextInputWidget`` to support nontextual empty fields.

- Fix typo about overriding templates using set_zpt_renderer in
  templating chapter.

- Fix link to imperative schema within in Colander docs within "Basics".

- Remove duplicate ``deform.widget.DateInputWidget`` class definition.

Features
~~~~~~~~

- Add a ``deform.widget.RichTextWidget`` widget, which adds the 
  TinyMCE WYSIWIG javascript editor to a text area.

- Add a ``deform.widget.AutocompleteInputWidget`` widget, which adds
  a text input that can be supplied a URL or iterable of choices to
  ease the search and selection of a finite set of choices.

- The ``deform.widget.Widget`` class now accepts an extra keyword
  argument in its constructor: ``css_class``.

- All widgets now inherit a ``css_class`` attribute from the base
  ``deform.widget.Widget`` class.  If `css_class`` contains a value,
  the "primary" element in the rendered widget will get a CSS
  ``class`` attribute equal to the value ("primary" is defined by the
  widget template's implementor).

- The ``deform.Field`` class now as an ``__iter__`` method which
  iterates over the children fields of the field upon which it is
  called (``for item in field`` == ``for item in field.children``).

0.3
---

Bug Fixes
~~~~~~~~~
