@@ -54,11 +54,11 @@ TODOs
       that allows you to retrieve all the logical resources required
       by all widgets that are part of a form.
 
-- [ ] Provide a lame default widget for tuples in order to avoid ``
+- [X] Provide a lame default widget for tuples in order to avoid ``
       File "/Users/...deform/widget.py", line 92, in serialize raise
       NotImplementedError`` during serialization or provide a better
       error message (maybe a subclass of Widget that spits out a more
-      informative error message).
+      informative error message).  (used TextInputCSV widget).
 
 - [ ] Somehow prevent schemas that have sequence types (tuples and
       sequences) that have no schema children from reaching the point
