@@ -12,7 +12,7 @@ default_widget_makers = {
     colander.Decimal: widget.TextInputWidget,
     colander.Boolean: widget.CheckboxWidget,
     colander.Date: widget.DateInputWidget,
-    colander.Tuple: widget.Widget, # null
+    colander.Tuple: widget.TextInputCSVWidget,
 }
 
 class filedict(dict):
